dds style.css document

--- a/index.html
+++ b/index.html
@@ -4,63 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Can Cui-Portfolio</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <header>
-        <nav>
-            <img alt="Welcome to Can Cui's Website">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="personal introduction.html">Personal Introduction</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
-            </ul>
+        <nav> 
+        <p> 
+                Welcome to Can Cui's Website</p>
+            <div class="nav">
+                <a href="index.html">Home</a>
+                <a href="personal introduction.html">Personal Introduction</a>
+                <a href="skills.html">Skills</a>
+                <a href="hobbies.html">Hobbies</a>
+            </div>
         </nav>
     </header>
     <main>
-        <div>
-            <img src="images/desert.jpg" width="800" height="600">
-            <img src="images/Joshua.jpg" width="800" height="600">
-            <img src="images/lavender.jpg" width="800" height="600">
-        </div>
-        <div>
-            <img src="images/portrait.jpg" width="150" height="180">
-        </div>
-        <div>
-            <p> Name: Can Cui</p>
-            <p> School: Wayne State University</p>
-            <p> Professional Direction : Web Design</p>
-            <p> Email: hk2100@wayne.edu </p>
-        </div>
-        <h3>Education And Career Experience</h3>
+        
+           <nav id="screen">
+              <div id="rolling">
+                <img src="images/lavender.jpg" height="500" width="800"/>
+                <img src="images/Joshua.jpg" height="500" width="800"/>
+                <img src="images/desert.jpg" height="500" width="800"/>
+               </div>
+           </nav>
+        
+        <h3 class="title"><em>|</em>Education And Career Experience</h3>
         <table>
             <tr>
-                <td>2010-2014</td>
+                <td class="underline">2010-2014</td>
                 <td>Food Sience and Engineering, Wuhan Institute of Design and sciences</td>
                 <td>I learned food inspection and food safety 
-                    and other related knowledge and won scholarships continuously</td>
+                    and other related knowledge and won scholarships continuously.</td>
             </tr>
             <tr>
-                <td>2014-2016</td>
+                <td class="underline">2014-2016</td>
                 <td>Food Sience and Engineering, JiMei University</td>
                 <td>I published 1 journal article and 3 patents, 
-                    and served as the vice president of the Student Union</td>
+                    and served as the vice president of the Student Union.</td>
             </tr>
             <tr>
-                <td>2016-2018</td>
+                <td class="underline">2016-2018</td>
                 <td>Yichang Three Gorges Inspection and Testing Center,China</td>
-                <td>Focus on food product inspection technology and business learning</td>
+                <td>Focus on food product inspection technology and business learning.</td>
             </tr>
         </table>  
-        <h3>Personal Skills</h3>
-        <ul>
+        <h3 class="title"><em>|</em>Personal Skills</h3>
+        <ul class="bold">
             <li><a href="skills.html">Web Design</a></li>
             <li><a href="skills.html">Project Management</a></li>
             <li><a href="skills.html">Database</a></li>
             <li><a href="skills.html">Food Testing</a></li>
         </ul>
     </main>
-    <footer>
+    <footer class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
             <li>Last Updated:Jun 1,2022 </li>
