--- a/hobbies.html
+++ b/hobbies.html
@@ -4,41 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Can Cui-Portfolio</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <header>
         <nav>
-            <img alt="Welcome to Can Cui's Website">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="personal introduction.html">Personal Introduction</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
-            </ul>
+            <p> 
+                Welcome to Can Cui's Website</p>
+             <div class="nav">
+                <a href="index.html">Home</a>
+                <a href="personal introduction.html">Personal Introduction</a>
+                <a href="skills.html">Skills</a>
+                <a href="hobbies.html">Hobbies</a>
+            </div>
         </nav>
     </header>
     <main>
-       <div>
+       <div class="photos">
+       <figure  class="figure1">
            <h3>Travel</h3>
-           <img src="images/gump.jpg" width="800" height="600">
+           <img src="images/gump.jpg" >
            <p>Traveling makes me happy, as long as I have time I like to travel with my family,
                 enjoy the beautiful scenery, experience the culture of different places.</p>
-       </div>
-       <div>
+        </figure>
+        <figure  class="figure2">
            <h3>Exercise</h3>
-           <img src="images/basketball game.jpg" width="800" height="600">
+           <img src="images/basketball game.jpg" >
            <p>I like sports. Basketball, swimming and badminton are my 
             favorite sports. Sports make me healthy and happy.</p>
-       </div>
-       <div>
+        </figure>
+       <figure  class="figure3">
            <h3>Cooking</h3>
-           <img src="images/dinner.jpg" width="800" height="600">
+           <img src="images/dinner.jpg" >
            <p>I enjoy the process of cooking very much, making all
                 kinds of delicious food for my family will make me very happy.</p>
+       </figure>
        </div>
            
     </main>
-    <footer>
+    <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
             <li>Last Updated:Jun 1,2022 </li>
