--- a/skills.html
+++ b/skills.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Can Cui-Portfolio</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <header>
         <nav>
-            <img alt="Welcome to Can Cui's Website">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="personal introduction.html">Personal Introduction</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
-            </ul>
+            <p class= "font-white foot-color"> 
+                Welcome to Can Cui's Website</p>
+            <div class="nav">
+                <a href="index.html">Home</a>
+                <a href="personal introduction.html">Personal Introduction</a>
+                <a href="skills.html">Skills</a>
+                <a href="hobbies.html">Hobbies</a>
+            </div>
         </nav>
     </header>
     <main>
-        <h3>Web Design</h3>
+        <div class="skills-box1">
+        <h3><em>|</em>Web Design</h3>
         <ol>
             <li>Proficient in JavaScript, HTML5,CSS3 and other web development technologies.</li>
             <li>Effectively use tools and techniques to troubleshoot, find, and fix errors. </li>
             <li>Develop an avenue for research investigation of WWW resources.</li>
             <li>Apply principles of design and user experience to the development of a software application.</li>
         </ol>
-        <h3>Project Management</h3>
+        </div>
+        <div class="skills-box2" >
+        <h3><em>|</em>Project Management</h3>
         <ol>
             <li>Develop work breakdown structure (WBS) and plan a project. </li>
             <li>Identify project risks and ways to mitigate the risks. </li>
@@ -33,7 +38,9 @@
             <li>Assess sociological or psychological issues that implicate management
                  and leadership in organizations.  </li>
         </ol>
-        <h3>Database</h3>
+        </div>
+        <div class="skills-box3" >
+        <h3><em>|</em>Database</h3>
         <ol>
            <li>Model a relational database based on business requirements
                 and implement the model in a MySQL database. </li>
@@ -42,16 +49,22 @@
            <li>The database structure can be changed,
                 tracked, and optimized according to project requirements.</li>
         </ol>
-        <h3>Food Testing</h3>
+        </div>
+        <div class="skills-box4">
+        <h3><em>|</em>Food Testing</h3>
         <ol>
             <li>Proficient in food detection technology (e.g. liquid chromatograph, gas chromatograph). </li>
             <li>Familiar with food laws and regulations formulation and modification.</li>
             <li>Familiar with food safety market supervision and management norms.</li>
         </ol>
-        <h3>My Future Career Direction </h3>
-        <p>Work in data analysis or web design.</p>
+       </div >
+       <div class="direction">
+           <h3>My Future Career Direction </h3>
+           <p>Work in data analysis or web design.</p>
+       </div>
+        
     </main>
-    <footer>
+    <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
             <li>Last Updated:Jun 1,2022 </li>
