Improved my project

--- a/personal introduction.html
+++ b/personal introduction.html
@@ -22,7 +22,7 @@
     <main>
         <div class="bigbox">
         <div class="protrait">
-            <img src="images/portrait.jpg"  >
+            <img src="images/portrait.jpg" alt="My protrait" >
             <p> Name: Can Cui</p>
             <p> School: Wayne State University</p>
             <p> Professional Direction : Web Design</p>
@@ -50,7 +50,7 @@
     <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
-            <li>Last Updated:Jun 1,2022 </li>
+            <li><a href="hk2100@wayne.edu">Contact Me</a></li>
         </ul>
     </footer>
 </body>
