--- a/skills.html
+++ b/skills.html
@@ -67,7 +67,7 @@
     <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
-            <li>Last Updated:Jun 1,2022 </li>
+            <li><a href="hk2100@wayne.edu">Contact Me</a></li>
         </ul>
     </footer>
 </body>
