Add verifiable forms

--- a/skills.html
+++ b/skills.html
@@ -9,13 +9,14 @@
 <body>
     <header>
         <nav>
-            <p class= "font-white foot-color"> 
+            <p class= "font-white foot-color">
                 Welcome to Can Cui's Website</p>
             <div class="nav">
                 <a href="index.html">Home</a>
                 <a href="personal introduction.html">Personal Introduction</a>
                 <a href="skills.html">Skills</a>
                 <a href="hobbies.html">Hobbies</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -62,12 +63,12 @@
            <h3>My Future Career Direction </h3>
            <p>Work in data analysis or web design.</p>
        </div>
-        
+
     </main>
     <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
-            <li><a href="hk2100@wayne.edu">Contact Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </footer>
 </body>
