--- a/personal introduction.html
+++ b/personal introduction.html
@@ -9,13 +9,14 @@
 <body>
     <header>
         <nav>
-            <p> 
+            <p>
                 Welcome to Can Cui's Website</p>
             <div class="nav">
                 <a href="index.html">Home</a>
                 <a href="personal introduction.html">Personal Introduction</a>
                 <a href="skills.html">Skills</a>
                 <a href="hobbies.html">Hobbies</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -34,12 +35,12 @@
                <li>HTML</li>
                <li>CSS</li>
                <li>Java Script</li>
-           </ul> 
+           </ul>
            <h3><em>|</em>Personal Introduction</h3>
-           <p>I am an outgoing person with a wide range of hobbies and love 
-                to make friends. I actively participate in activities and seriously 
+           <p>I am an outgoing person with a wide range of hobbies and love
+                to make friends. I actively participate in activities and seriously
                 study professional knowledge in school. Strong sense of responsibility
-                and team spirit, full of enthusiasm for work. I like to constantly 
+                and team spirit, full of enthusiasm for work. I like to constantly
                 learn new knowledge, contact new things, improve my business ability
                 and broaden my horizon. All the time, hard work, positive, optimistic
                 is my life creed. I will stick to my faith more in my future life and
@@ -50,7 +51,7 @@
     <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
-            <li><a href="hk2100@wayne.edu">Contact Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </footer>
 </body>
