Add verifiable forms

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,26 +16,28 @@
                 <a href="personal introduction.html">Personal Introduction</a>
                 <a href="skills.html">Skills</a>
                 <a href="hobbies.html">Hobbies</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
     <main>
+        <h1 class="hidden">Hobbies</h1>
        <div class="photos">
        <figure  class="figure1">
            <h3>Travel</h3>
-           <img src="images/gump.jpg" >
+           <img src="images/gump.jpg" alt="I took pictures in the desert." >
            <p>Traveling makes me happy, as long as I have time I like to travel with my family,
                 enjoy the beautiful scenery, experience the culture of different places.</p>
         </figure>
         <figure  class="figure2">
            <h3>Exercise</h3>
-           <img src="images/basketball game.jpg" >
+           <img src="images/basketball game.jpg" alt="A picture of me playing a basketball game.">
            <p>I like sports. Basketball, swimming and badminton are my 
             favorite sports. Sports make me healthy and happy.</p>
         </figure>
        <figure  class="figure3">
            <h3>Cooking</h3>
-           <img src="images/dinner.jpg" >
+           <img src="images/dinner.jpg" alt="I made a big dinner." >
            <p>I enjoy the process of cooking very much, making all
                 kinds of delicious food for my family will make me very happy.</p>
        </figure>
@@ -45,7 +47,7 @@
     <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
-            <li>Last Updated:Jun 1,2022 </li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </footer>
 </body>
