--- a/personal introduction.html
+++ b/personal introduction.html
@@ -16,13 +16,14 @@
                 <a href="personal introduction.html">Personal Introduction</a>
                 <a href="skills.html">Skills</a>
                 <a href="hobbies.html">Hobbies</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
     <main>
         <div class="bigbox">
         <div class="protrait">
-            <img src="images/portrait.jpg"  >
+            <img src="images/portrait.jpg" alt="My protrait" >
             <p> Name: Can Cui</p>
             <p> School: Wayne State University</p>
             <p> Professional Direction : Web Design</p>
@@ -50,7 +51,7 @@
     <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
-            <li>Last Updated:Jun 1,2022 </li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </footer>
 </body>
