--- a/skills.html
+++ b/skills.html
@@ -16,6 +16,7 @@
                 <a href="personal introduction.html">Personal Introduction</a>
                 <a href="skills.html">Skills</a>
                 <a href="hobbies.html">Hobbies</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -67,7 +68,7 @@
     <footer  class="foot">
         <ul>
             <li>&copy;2022 CanCui</li>
-            <li>Last Updated:Jun 1,2022 </li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </footer>
 </body>
