Made adjustments to my code

--- a/personal introduction.html
+++ b/personal introduction.html
@@ -21,13 +21,17 @@
         </nav>
     </header>
     <main>
+        <h1 class="hidden">Personal Introduction</h1>
         <div class="bigbox">
         <div class="protrait">
             <img src="images/portrait.jpg" alt="My protrait" >
-            <p> Name: Can Cui</p>
-            <p> School: Wayne State University</p>
-            <p> Professional Direction : Web Design</p>
-            <p> Email: hk2100@wayne.edu </p>
+            
+            <div class="sketch">
+            <p> Name: Can Cui <br>
+            School: Wayne State University  <br>
+            Professional Direction : Web Design <br>
+             Email: hk2100@wayne.edu </p>
+            </div>
         </div>
         <div class="intro">
            <h3><em>|</em>Personal Skills</h3>
