--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta name="description" content="Users can fill in some basic personal 
+    information to contact me.">
     <title>Can Cui-Portfolio</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
@@ -22,6 +23,7 @@
         </nav>
     </header>
     <main>
+        <h1 class="hidden">Contact</h1>
         <form action="https://formspree.io/f/mzbolblq" method="post" class="validate">
            
             <label for="name">Name</label>
