--- a/skills.html
+++ b/skills.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Can Cui-Portfolio</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    
 </head>
 <body>
     <header>
         <nav>
-            <p class= "font-white foot-color">
+            <p>
                 Welcome to Can Cui's Website</p>
             <div class="nav">
                 <a href="index.html">Home</a>
@@ -21,6 +22,7 @@
         </nav>
     </header>
     <main>
+        <h1 class="hidden">Skills</h1>
         <div class="skills-box1">
         <h3><em>|</em>Web Design</h3>
         <ol>
